--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="home_title">Home</string>
     <string name="add_new_title">New</string>
     <string name="list_title">List</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="delete_option_title">Delete</string>
+    <string name="edit_option_title">Edit</string>
+    <string name="events_home_title">Upcoming events</string>
+    <string name="notes_home_title">Pinned notes</string>
 </resources>
